--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,23 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Thread-Queue-Any-Monitored
-version:      0.08
-version_from: lib/Thread/Queue/Any/Monitored.pm
-installdirs:  site
+---
+abstract: 'monitor a queue for any specific content'
+author:
+  - 'Elizabeth Mattijsen (liz@dijkmat.nl)'
+build_requires:
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112150'
+license: unknown
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Thread-Queue-Any-Monitored
+no_index:
+  directory:
+    - t
+    - inc
 requires:
-    Thread::Queue::Any:            0.06
-    Thread::Queue::Monitored:      0.07
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+  Thread::Queue::Any: 0.06
+  Thread::Queue::Monitored: 0.07
+version: 0.09
