--- a/META.yml
+++ b/META.yml
@@ -18,6 +18,7 @@ no_index:
     - t
     - inc
 requires:
-  Thread::Queue::Any: 0.13
-  Thread::Queue::Monitored: 0.12
-version: 0.12
+  Test::More: 0.88
+  Thread::Queue::Any: 1.11
+  Thread::Queue::Monitored: 1.02
+version: 1.02
