Import of ELIZABETH/Thread-Queue-Any-Monitored-1.03 from CPAN.
gitpan-cpan-distribution: Thread-Queue-Any-Monitored
gitpan-cpan-version:      1.03
gitpan-cpan-path:         ELIZABETH/Thread-Queue-Any-Monitored-1.03.tar.gz
gitpan-cpan-author:       ELIZABETH
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -18,6 +18,7 @@ no_index:
     - t
     - inc
 requires:
-  Thread::Queue::Any: 0.16
-  Thread::Queue::Monitored: 0.14
-version: 0.13
+  Test::More: 0.88
+  Thread::Queue::Any: 1.13
+  Thread::Queue::Monitored: 1.04
+version: 1.03
